# sgs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: crypto.rs  main.rs
