[package]
name = "mgs"
version = "0.1.0"
authors = ["mgravitt"]
edition = "2021"
description = "A tool for generating and saving secret mnemonics"
readme = "README.md"
repository = "https://github.com/mgravitt/mgs"
license = "MIT"

[dependencies]
clap = { version = "4.5.6", features = ["derive", "env"] }
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
ring = "0.17.8"
rpassword = "7.3.1"
sha2 = "0.10.8"
tiny-bip39 = "1.0.0"

[dev-dependencies]
tempfile = "3.10.1"
